# freiner

./: .coveragerc  .gitattributes  .gitignore  .readthedocs.yaml  CHANGELOG.rst  MANIFEST.in  Makefile  README.rst  docker-compose.yml  pyproject.toml  pytest.ini  setup.cfg  tasks.py
.github/workflows/: ci.yml  release.yml
doc/source/: api.rst  conf.py  custom-storage.rst  index.rst  storage.rst  strategies.rst
docs/source/: conf.py  index.rst
freiner/: __init__.py  errors.py  limits.py  strategies.py  util.py
freiner/storage/: __init__.py  base.py  memcached.py  memory.py  redis.py  redis_cluster.py  redis_sentinel.py  registry.py
freiner/strategies/: __init__.py  fixed_window.py  fixed_window_elastic.py  moving_window.py
requirements/: test.txt
tests/: __init__.py  test_limit_granularities.py  test_limits.py  test_ratelimit_parser.py  test_storage.py  test_strategy.py
tests/integration/: test_concurrency.py
tests/storage/: _redis.py  test_memcached.py  test_memory.py  test_redis.py  test_redis_cluster.py  test_redis_sentinel.py
tests/strategy/: test_memcached.py  test_memory.py  test_redis.py  test_redis_sentinel.py
