[metadata]
name = freiner
version = 3.0.0
url = https://github.com/djmattyg007/freiner
project_urls =
    Documentation = https://freiner.readthedocs.io/
    Source = https://github.com/djmattyg007/freiner
    Issues = https://github.com/djmattyg007/freiner/issues
author = Matthew Gamble
author_email = git@matthewgamble.net
license = MIT
license_file = LICENSE.txt
description = "Rate limiting utilities"
long_description = file: README.rst
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9


[options]
zip_safe = False
packages = find:
python_requires = >= 3.7
install_requires =
    typing-extensions >= 3.10.0.0, < 4.0.0


[options.extras_require]
docs =
    sphinx >= 4.1.2, < 5.0.0
    sphinx_rtd_theme == 0.5.2
    readthedocs-sphinx-search == 0.1.0
    pymemcache
    redis
    redis-py-cluster
lint =
    black
    check-manifest
    flake8
    flake8-black
    flake8-bugbear
    flake8-isort
    flake8-pytest-style
    #flake8-spellcheck
    isort
    pep8-naming
typecheck =
    mypy
    types-freezegun
    types-redis
test =
    coverage[toml]
    freezegun
    pymemcache
    pytest
    pytest-cov
    redis
build =
    build
    twine
dev =
    wheel
    invoke
    %(docs)s
    %(lint)s
    %(typecheck)s
    %(test)s


[options.packages.find]
exclude =
    tests
    tests.*


[flake8]
application-import-names = freiner, tests
exclude = build, docs/**
select =
    # Regular flake8 rules
    C, E, F, W
    # flake8-bugbear rules
    B
    # flake8-isort
    I
    # pep8-naming rules
    N
    # flake8-pytest-style
    PT
    # flake8-spellcheck
    # Disabled until this PR has been released: https://github.com/MichaelAquilina/flake8-spellcheck/pull/55
    #SC
ignore =
    # E203: whitespace before ':' (replaced by Black)
    E203
    # E501: line too long (replaced by Black)
    E501
    # W503: line break before binary operator (not PEP8 compliant)
    W503
    # PT004: disabled pending this github issue: https://github.com/m-burst/flake8-pytest-style/issues/141
    PT004

# flake8-pytest-style
pytest-fixture-no-parentheses = true
pytest-parametrize-values-type = tuple
pytest-parametrize-values-row-type = tuple

# flake8-spellcheck
# Disabled until this PR has been released: https://github.com/MichaelAquilina/flake8-spellcheck/pull/55
#spellcheck-targets = comments
#spellcheck-add-dictionary = pytest
