[metadata]
name = freiner
version = 3.0.5
url = https://github.com/djmattyg007/freiner
project_urls =
    Documentation = https://freiner.readthedocs.io/
    Source = https://github.com/djmattyg007/freiner
    Issues = https://github.com/djmattyg007/freiner/issues
author = Matthew Gamble
author_email = git@matthewgamble.net
license = MIT
license_file = LICENSE.txt
description = Generic rate limiting solution for python applications, supporting various strategies and storage backends (redis and memcached).
long_description = file: README.rst
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10


[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >= 3.8


[options.extras_require]
docs =
    sphinx >= 4.4.0, < 5.0.0
    sphinx_rtd_theme == 1.0.0
    readthedocs-sphinx-search == 0.1.1
    pymemcache
    redis
    redis-py-cluster
lint =
    bandit
    black
    check-manifest
    darglint
    flake8
    flake8-annotations-complexity
    flake8-black
    flake8-breakpoint
    flake8-bugbear
    flake8-builtins
    flake8-comprehensions
    flake8-eradicate
    flake8-expression-complexity
    flake8-isort
    flake8-pytest-style
    flake8-requirements
    #flake8-spellcheck
    isort
    pep8-naming
typecheck =
    mypy
    types-freezegun
    types-redis
test =
    coverage[toml]
    freezegun
    pymemcache
    pytest
    pytest-cov
    redis
build =
    build
    twine
dev =
    wheel
    invoke
    %(docs)s
    %(lint)s
    %(typecheck)s
    %(test)s


[options.packages.find]
exclude =
    tests
    tests.*


[flake8]
application-import-names = freiner, tests
exclude = build, docs/**
max-line-length = 100
select =
    # Regular flake8 rules, plus flake8-comprehensions (C4), plus flake8-eradicate (E800)
    C, E, F, W
    # flake8-builtins
    A
    # flake8-bugbear rules, plus flake8-breakpoint (B6)
    B
    # darglint
    DAR
    # flake8-isort, plus flake8-requirements (I9)
    I
    # pep8-naming rules
    N
    # flake8-pytest-style
    PT
    # flake8-spellcheck
    # Disabled until this PR has been released: https://github.com/MichaelAquilina/flake8-spellcheck/pull/55
    #SC
    # flake8-expression-complexity
    ECE
    # flake8-annotations-complexity
    TAE
ignore =
    # E203: whitespace before ':' (replaced by Black)
    E203
    # E501: line too long (replaced by Black)
    E501
    # W503: line break before binary operator (not PEP8 compliant)
    W503
    # PT004: disabled pending this github issue: https://github.com/m-burst/flake8-pytest-style/issues/141
    PT004
    # DAR201: don't have time to fill out descriptions for every single method right now
    DAR201

# darglint
docstring_style=sphinx

# flake8-pytest-style
pytest-fixture-no-parentheses = true
pytest-parametrize-values-type = tuple
pytest-parametrize-values-row-type = tuple

# flake8-requirements
known-modules = redis-py-cluster:[rediscluster]

# flake8-spellcheck
# Disabled until this PR has been released: https://github.com/MichaelAquilina/flake8-spellcheck/pull/55
#spellcheck-targets = comments
#spellcheck-add-dictionary = pytest
